@@ -1,3 +1,7 @@
+Fri Mar 13 15:48:37 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>
+
+    * Added some basic functionality and tests for database fields.
+
 Fri Mar 13 12:13:31 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>
 
     * flaxclient.php, unittests/_restclient.php, unittests/test_database.php:
